--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
                     <input type="radio" name="investMode" value="monthly" checked class="hidden"
                         onchange="toggleInvestMode()">
                     <div
-                        class="invest-radio-label py-3 rounded-lg text-sm text-slate-400 cursor-pointer transition-all duration-200">
+                        class="radio-label py-3 rounded-lg text-sm text-slate-400 cursor-pointer transition-all duration-200">
                         💰 얼마씩 모을까?</div>
                 </label>
                 <label class="flex-1 text-center">
                     <input type="radio" name="investMode" value="period" class="hidden" onchange="toggleInvestMode()">
                     <div
-                        class="invest-radio-label py-3 rounded-lg text-sm text-slate-400 cursor-pointer transition-all duration-200">
+                        class="radio-label py-3 rounded-lg text-sm text-slate-400 cursor-pointer transition-all duration-200">
                         ⏳ 얼마나 걸릴까?</div>
                 </label>
             </div>
